--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -24,9 +24,9 @@
                         <input class="{% if validation_error %}is-invalid{% endif %}" type="password" name="password">
                         <label for="password">Password</label>
                     </div>
-                    <input class="btn btn-primary" type="submit" value="Login">
+                    <input class="btn btn-full" type="submit" value="Login">
                 </form>
-                 Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+                 Don't have an account? <a href="{% url 'register' %}" style="color:#40E0D0;">Register here.</a>
             </div>
         </div>
     </div>
