--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -38,10 +38,10 @@
                         <div class="password_error">{{ password_error }}</div>
                     {% endif %}
                 </div>
-                <input class="btn btn-primary" type="submit" value="Register">
+                <input class="btn btn-full" type="submit" value="Register">
             </form>
 
-            Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+            Already have an account? <a href="{% url 'login' %}" style="color:#40E0D0;">Log In here.</a>
          </div>
     </div>
 </div>
