--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -188,18 +188,25 @@ input:-webkit-autofill:active {
   /**
 * Navigation Menu
 */
-.navbar {
+  .navbar {
     padding: 0;
   }
   
   .navbar ul {
-    margin: 0;
-    padding: 0;
     display: flex;
     list-style: none;
-    align-items: center;
+    padding-left: 0;
+    margin: 0;
+  }
+
+  .navbar ul li {
+    margin: 0 10px;
   }
   
+  .centered-navbar ul {
+    justify-content: center;
+  }
+
   .navbar li {
     position: relative;
   }
@@ -234,7 +241,7 @@ input:-webkit-autofill:active {
   /* 
   # login and register buttons
   */
-  .btn-login {
+  .btn-outline {
     color: #40E0D0;
     border-color: #40E0D0;
     background-color: transparent;
@@ -246,13 +253,13 @@ input:-webkit-autofill:active {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.btn-login:hover {
+.btn-outline:hover {
     color: #fff;
     background-color: #40E0D0;
     border-color: #40E0D0;
 }
 
-.btn-register {
+.btn-full {
     color: #fff;
     background-color: #40E0D0;
     border-color: #40E0D0;
@@ -263,7 +270,7 @@ input:-webkit-autofill:active {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.btn-register:hover {
+.btn-full:hover {
     color: #fff;
     background-color: #008080;
     border-color: #40E0D0;
@@ -313,7 +320,8 @@ input:-webkit-autofill:active {
   .portfolio .portfolio-item {
     background: #008080;
     overflow: hidden;
-    min-height: 200px;
+    height: 300px;
+    height: 300px;
     position: relative;
     border-radius: 4px;
     margin: 0 0 30px 0;
