--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="col-md-9 form-group mt-3 mt-md-0">
-                      <input type="text" class="form-control" name="title" id="" placeholder="Enter image url" required>
+                      <input type="text" class="form-control" name="image_url" id="" placeholder="Enter image url" required>
                     </div>
                 </div>
 
