--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -3,8 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>X-AUCTIONS{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <title>X-AUCTIONS{% block title %}{% endblock %}</title>
     <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="{% static 'auctions/img/x-favicon.png' %}">
@@ -16,20 +16,26 @@
         <div class="logo">
             <h1 class="text-light"><a href="#"><span>X-AUCTIONS</span></a></h1>
         </div>
-        <nav id="navbar" class="navbar">
-          <ul>
-              <li><a class="{% if request.resolver_match.url_name == 'index' %}active{% endif %}" href="{% url 'index' %}">Home</a></li>
-              <li><a class="{% if request.resolver_match.url_name == 'display' %}active{% endif %}" href="{% url 'display' %}">Category</a></li>
-              <li><a class="{% if request.resolver_match.url_name == 'watchlist' %}active{% endif %}" href="{% url 'watchlist' %}">Watchlist</a></li>
-              <li><a class="{% if request.resolver_match.url_name == 'create_listing' %}active{% endif %}" href="{% url 'create_listing' %}">Create Auction</a></li>
-              <li><a href="#">Previous Auction</a></li>
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-      
+        <nav id="navbar" class="navbar {% if not user.is_authenticated %}centered-navbar{% endif %}">
+            <ul class="d-flex {% if not user.is_authenticated %}justify-content-center{% endif %}">
+                {% if user.is_authenticated %}
+                    <li><a class="{% if request.resolver_match.url_name == 'index' %}active{% endif %}" href="{% url 'index' %}">Home</a></li>
+                    <li><a class="{% if request.resolver_match.url_name == 'display' %}active{% endif %}" href="{% url 'display' %}">Category</a></li>
+                    <li><a class="{% if request.resolver_match.url_name == 'watchlist' %}active{% endif %}" href="{% url 'watchlist' %}">Watchlist</a></li>
+                    <li><a class="{% if request.resolver_match.url_name == 'create_listing' %}active{% endif %}" href="{% url 'create_listing' %}">Create Auction</a></li>
+                    <li><a href="#">Previous Auction</a></li>
+                {% endif %}
+            </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
+        
         <div class="ml-auto">
-            <a href="{% url 'login' %}" class="btn btn-login">Log In</a>
-            <a href="{% url 'register' %}" class="btn btn-register ml-2">Register</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="btn btn-full ml-2">Log Out</a>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-outline">Log In</a>
+                <a href="{% url 'register' %}" class="btn btn-full ml-2">Register</a>
+            {% endif %}
         </div>
     </div>
 </header>
@@ -40,7 +46,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h2>{% block heading %}{% endblock %}</h2>
                 <ol>
-                    <li>{% block crumbs %}Our category{% endblock %}</li>
+                    <li>{% block crumbs %}{% endblock %}</li>
                 </ol>
             </div>
         </div>
@@ -52,6 +58,8 @@
 <script src="{% static 'auctions/script.js' %}"></script>
 </body>
 </html>
+
+
 
 {% comment %} {% load static %}
 
