--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,82 +1,179 @@
 {% extends "auctions/layout.html" %}
-{% block title %}| Current Auctions{% endblock %}
+{% block title %} | Current Auctions{% endblock %}
+{% block heading %}Full Description{% endblock %}
+{% block crumbs %}Full Description Alerts{% endblock %}
 
 {% block body %}
+  
+      <!-- ======= Blog Single Section ======= -->
+      <section id="blog" class="blog">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="row">
+  
+            <div class="col-lg-8 entries">
+  
+              <article class="entry entry-single">
+  
+                <div class="entry-img">
+                    <img src="{{ listing.image_url }}" alt="{{ listing.title }}" height="400px" class="img-fluid">
+                </div>
+  
+                <h2 class="entry-title">
+                  <a href="blog-single.html">Dolorum optio tempore voluptas dignissimos cumque fuga qui quibusdam quia</a>
+                </h2>
+  
+                <div class="entry-meta">
+                  <ul>
+                    <li class="d-flex align-items-center"><i class="bi bi-person"></i> <a href="blog-single.html">John Doe</a></li>
+                    <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <a href="blog-single.html"><time datetime="2020-01-01">Jan 1, 2020</time></a></li>
+                    <li class="d-flex align-items-center"><i class="bi bi-chat-dots"></i> <a href="blog-single.html">12 Comments</a></li>
+                  </ul>
+                </div>
+  
+                <div class="entry-content">
+                  <p>
+                    Similique neque nam consequuntur ad non maxime aliquam quas. Quibusdam animi praesentium. Aliquam et laboriosam eius aut nostrum quidem aliquid dicta.
+                    Et eveniet enim. Qui velit est ea dolorem doloremque deleniti aperiam unde soluta. Est cum et quod quos aut ut et sit sunt. Voluptate porro consequatur assumenda perferendis dolore.
+                  </p>
+                </div>
+  
+                <div class="entry-footer">
+                  <i class="bi bi-folder"></i>
+                  <ul class="cats">
+                    <li><a href="#">Business</a></li>
+                  </ul>
+  
+                  <i class="bi bi-tags"></i>
+                  <ul class="tags">
+                    <li><a href="#">Creative</a></li>
+                    <li><a href="#">Tips</a></li>
+                    <li><a href="#">Marketing</a></li>
+                  </ul>
+                </div>
+  
+              </article><!-- End blog entry -->
+  
+              <div class="blog-comments">
+  
+                <h4 class="comments-count">8 Comments</h4>
+  
+                <div id="comment-1" class="comment">
+                  <div class="d-flex">
+                    <div class="comment-img"><img src="assets/img/blog/comments-1.jpg" alt=""></div>
+                    <div>
+                      <h5><a href="">Georgia Reader</a> <a href="#" class="reply"><i class="bi bi-reply-fill"></i> Reply</a></h5>
+                      <time datetime="2020-01-01">01 Jan, 2020</time>
+                      <p>
+                        Et rerum totam nisi. Molestiae vel quam dolorum vel voluptatem et et. Est ad aut sapiente quis molestiae est qui cum soluta.
+                        Vero aut rerum vel. Rerum quos laboriosam placeat ex qui. Sint qui facilis et.
+                      </p>
+                    </div>
+                  </div>
+                </div><!-- End comment #1 -->
 
-<div class="container">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}" role="alert">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
-</div>
 
-<div class="row mx-3">
-    {% if user.is_authenticated and listing.is_active %}
-        {% if is_owner %}
-            <form action="{% url 'close_auction' id=listing.id %}" method="POST" class="mx-3">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Close</button>
-            </form>
-        {% endif %}
-            
-        {% if check_listing_in_watchlist %}
-            <form action="{% url 'remove_watchlist' id=listing.id %}" method="POST">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Remove from Watchlist</button>
-            </form>
-        {% else %}
-            <form action="{% url 'add_watchlist' id=listing.id %}" method="POST">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-success">Add to Watchlist</button>
-            </form>
-        {% endif %}
-    {% endif %}
-</div>
+  
+                <div class="reply-form">
+                  <h4>Leave a Commment</h4>
+                  <p>Your email address will not be published. Required fields are marked * </p>
+                  <form action="">
 
-<h2>Item: {{ listing.title }}</h2>
-<img src="{{ listing.image_url }}" alt="{{ listing.title }}" height="400px" class="img-fluid">
-<p>{{ listing.description }}</p>
-<p>Owner: {{ listing.owner }}</p>
-<h6><strong>R</strong> {{ listing.starting_bid.bid }}</h6>
-
-{% if user.is_authenticated %}
-    <form action="{% url 'add_bid' id=listing.id %}" method="POST">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="new_bid">Add Bid:</label>
-            <input type="number" min="0" name="starting_bid" placeholder="Enter New Bid" class="form-control" required>
+                    <div class="row">
+                      <div class="col form-group">
+                        <textarea name="comment" class="form-control" placeholder="Your Comment*"></textarea>
+                      </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Post Comment</button>
+  
+                  </form>
+  
+                </div>
+  
+              </div><!-- End blog comments -->
+  
+            </div><!-- End blog entries list -->
+  
+            <div class="col-lg-4">
+  
+              <div class="sidebar">
+  
+                <h3 class="sidebar-title">Search</h3>
+                <div class="sidebar-item search-form">
+                  <form action="">
+                    <input type="text">
+                    <button type="submit"><i class="bi bi-search"></i></button>
+                  </form>
+                </div><!-- End sidebar search formn-->
+  
+                <h3 class="sidebar-title">Categories</h3>
+                <div class="sidebar-item categories">
+                  <ul>
+                    <li><a href="#">General <span>(25)</span></a></li>
+                    <li><a href="#">Lifestyle <span>(12)</span></a></li>
+                    <li><a href="#">Travel <span>(5)</span></a></li>
+                  </ul>
+                </div><!-- End sidebar categories-->
+  
+                <h3 class="sidebar-title">Recent Posts</h3>
+                <div class="sidebar-item recent-posts">
+                  <div class="post-item clearfix">
+                    <img src="assets/img/blog/blog-recent-1.jpg" alt="">
+                    <h4><a href="blog-single.html">Nihil blanditiis at in nihil autem</a></h4>
+                    <time datetime="2020-01-01">Jan 1, 2020</time>
+                  </div>
+  
+                  <div class="post-item clearfix">
+                    <img src="assets/img/blog/blog-recent-2.jpg" alt="">
+                    <h4><a href="blog-single.html">Quidem autem et impedit</a></h4>
+                    <time datetime="2020-01-01">Jan 1, 2020</time>
+                  </div>
+  
+                  <div class="post-item clearfix">
+                    <img src="assets/img/blog/blog-recent-3.jpg" alt="">
+                    <h4><a href="blog-single.html">Id quia et et ut maxime similique occaecati ut</a></h4>
+                    <time datetime="2020-01-01">Jan 1, 2020</time>
+                  </div>
+  
+                  <div class="post-item clearfix">
+                    <img src="assets/img/blog/blog-recent-4.jpg" alt="">
+                    <h4><a href="blog-single.html">Laborum corporis quo dara net para</a></h4>
+                    <time datetime="2020-01-01">Jan 1, 2020</time>
+                  </div>
+  
+                  <div class="post-item clearfix">
+                    <img src="assets/img/blog/blog-recent-5.jpg" alt="">
+                    <h4><a href="blog-single.html">Et dolores corrupti quae illo quod dolor</a></h4>
+                    <time datetime="2020-01-01">Jan 1, 2020</time>
+                  </div>
+  
+                </div><!-- End sidebar recent posts-->
+  
+                <h3 class="sidebar-title">Tags</h3>
+                <div class="sidebar-item tags">
+                  <ul>
+                    <li><a href="#">App</a></li>
+                    <li><a href="#">IT</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">Mac</a></li>
+                    <li><a href="#">Design</a></li>
+                    <li><a href="#">Office</a></li>
+                    <li><a href="#">Creative</a></li>
+                    <li><a href="#">Studio</a></li>
+                    <li><a href="#">Smart</a></li>
+                    <li><a href="#">Tips</a></li>
+                    <li><a href="#">Marketing</a></li>
+                  </ul>
+                </div><!-- End sidebar tags-->
+  
+              </div><!-- End sidebar -->
+  
+            </div><!-- End blog sidebar -->
+  
+          </div>
+  
         </div>
-        <button type="submit" class="btn btn-primary">Submit Bid</button>
-    </form>
-{% endif %}
+      </section><!-- End Blog Single Section -->
 
-<h2>Comments</h2>
-<div class="row mx-3">
-    {% if user.is_authenticated %}
-        <form action="{% url 'add_comment' id=listing.id %}" method="POST">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="new_comment">Add Comment:</label>
-                <input type="text" name="new_comment" placeholder="Add New Comment" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-warning">Add Comment</button>
-        </form>
-    {% endif %}
-    <br>
-    
-    <ul class="list-group">
-        {% for comment in all_comments %}
-            <li class="list-group-item">
-                {{ comment.message }}
-                <p class="small text-muted">Posted by {{ comment.author }}</p>
-            </li>
-        {% empty %}
-            <li class="list-group-item">No comments yet.</li>
-        {% endfor %}
-    </ul>
-</div>
 
 {% endblock %}
