--- a/auctions/templates/auctions/listing copy.html
+++ b/auctions/templates/auctions/listing copy.html
@@ -37,7 +37,7 @@
 </div>
 
 <h2>Item: {{ listing.title }}</h2>
-{% comment %} <img src="{{ listing.image_url }}" alt="{{ listing.title }}" height="400px" class="img-fluid"> {% endcomment %}
+<img src="{{ listing.image_url }}" alt="{{ listing.title }}" height="400px" class="img-fluid">
 <p>{{ listing.description }}</p>
 <p>Owner: {{ listing.owner }}</p>
 <h6><strong>R</strong> {{ listing.starting_bid.bid }}</h6>
