--- a/auctions/templates/auctions/watchlist copy.html
+++ b/auctions/templates/auctions/watchlist copy.html
@@ -1,7 +1,12 @@
 {% extends "auctions/layout.html" %}
 {% block title %} | Watchlist{% endblock %}
 {% block heading %}Your Watchlist{% endblock %}
-{% block crumbs %}{% endblock %}
+
+{% block crumbs %}
+    {% if not listings %}
+        No active listings in your watchlist.
+    {% endif %}
+{% endblock %}
 
 {% block body %}
 <div class="container">
@@ -22,8 +27,6 @@
                 </div>
             {% endfor %}
         </div>
-    {% else %}
-        <p>No active listings in your watchlist.</p>
     {% endif %}
 </div>
 {% endblock %}
