--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -1,29 +1,34 @@
 {% extends "auctions/layout.html" %}
 {% block title %} | Watchlist{% endblock %}
 {% block heading %}Your Watchlist{% endblock %}
-{% block crumbs %}{% endblock %}
+
+{% block crumbs %}
+    {% if listings %}
+        Here are your active watchlist
+    {% else %}
+        No active listings in your watchlist.
+    {% endif %}
+{% endblock %}
 
 {% block body %}
-<div class="container">
-    {% if listings %}
-        <div class="row mx-3">
+<!-- ======= Portfolio Section ======= -->
+<section class="portfolio">
+    <div class="container mt-3">
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
             {% for listing in listings %}
-                <div class="card mx-3 mb-3" style="width: 18rem;">
-                    <img src="{{ listing.image_url }}" class="card-img-top" alt="{{ listing.title }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ listing.title }}</h5>
-                        <p class="card-text">{{ listing.description }}</p>
-                        <a href="{% url 'listing' id=listing.id %}" class="btn btn-primary">Details</a>
-                        <form action="{% url 'remove_watchlist' id=listing.id %}" method="POST" class="d-inline">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-danger btn-sm mt-2">Remove from Watchlist</button>
-                        </form>
+                <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
+                    <div class="portfolio-item">
+                        <img src="{{ listing.image_url }}" class="img-fluid" alt="{{ listing.title }}">
+                        <div class="portfolio-info">
+                            <h3><a href="{% url 'listing' id=listing.id %}" class="btn btn-outline">Details</a></h3>
+                            <div>
+                                <a href="{{ listing.image_url }}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="{{ listing.title }}"><i class="bx bx-plus"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             {% endfor %}
         </div>
-    {% else %}
-        <p>No active listings in your watchlist.</p>
-    {% endif %}
-</div>
+    </div>
+</section><!-- End Portfolio Section -->
 {% endblock %}
