--- a/auctions/templates/auctions/display.html
+++ b/auctions/templates/auctions/display.html
@@ -15,27 +15,31 @@
  <!-- ======= Portfolio Section ======= -->
  <section class="portfolio mt-5">
     <div class="container">
-
-      <div class="row">
-        <div class="col-lg-12">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            {% for category in categories %}
-                <li data-filter=".filter-app" value="{{ category.id }}">{{ category.category_name }}</li>
-            {% endfor %}
-          </ul>
+      <form action="{% url 'display' %}" method="POST" class="my-3" id="categoryForm">
+        {% csrf_token %}
+        <div class="row">
+            <div class="col-lg-12">
+                <ul id="portfolio-flters" name="category">
+                    <li data-filter="*" class="{% if not selected_category %}filter-active{% endif %}" onclick="submitForm('')">All</li>
+                    {% for category in categories %}
+                        <li data-filter=".filter-app" class="{% if selected_category == category.id|stringformat:"s" %}filter-active{% endif %}" onclick="submitForm('{{ category.id }}')">{{ category.category_name }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-      </div>
-
+        <input type="hidden" name="category" id="categoryInput" value="{{ selected_category }}">
+    </form>
+    </form>
+    
       <div class="row portfolio-container listings" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
         {% for listing in listings %}
             <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
             <div class="portfolio-item">
                 <img src="{{ listing.image_url }}" class="img-fluid" alt="{{ listing.title }}">
                 <div class="portfolio-info">
-                <h3>App 1</h3>
+                <a href=""></a><h3>Details</h3></a>
                 <div>
-                    <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                    <a href="{{ listing.image_url }}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
                 </div>
@@ -46,4 +50,11 @@
 
     </div>
   </section><!-- End Portfolio Section -->
+
+  <script>
+    function submitForm(categoryId) {
+        document.getElementById('categoryInput').value = categoryId;
+        document.getElementById('categoryForm').submit();
+    }
+    </script>
 {% endblock %}
