--- a/auctions/templates/auctions/closed_auctions.html
+++ b/auctions/templates/auctions/closed_auctions.html
@@ -24,7 +24,7 @@ Closed Auctions
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <img src="{{ listing.image_url }}" class="card-img-top" alt="{{ listing.title }}" style="max-height:370px;">
-                        <div class="card-body">
+                        <div class="card-body" style="height:310px">
                             <h5 class="card-title">{{ listing.title }}</h5>
                             <p class="card-text">{{ listing.description }}</p>
                             <p class="card-text"><strong>Final Bid:</strong> {{ listing.starting_bid.bid }}</p>
