--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -2,35 +2,27 @@
 {% block title %} | Login{% endblock %}
 
 {% block body %}
-
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col-l1 col-md-4 mx-auto mt-5">
-
-                <h2>Login</h2>
-
-                <form action="{% url 'login' %}" method="post">
-                    {% csrf_token %}
-                    <div class="form-group input-field">
-                        <input autofocus class="{% if validation_error %}is-invalid{% endif %}" type="text" name="username">
-                        <label for="username">Username</label>
-                        {% if validation_error %}
-                            <div class="validation_error">{{ validation_error }}</div>
-                        {% endif %}
-                    </div>
-                    <div class="form-group input-field">
-                        <input class="{% if validation_error %}is-invalid{% endif %}" type="password" name="password">
-                        <label for="password">Password</label>
-                    </div>
-                    <input class="btn btn-full" type="submit" value="Login">
-                </form>
-                 Don't have an account? <a href="{% url 'register' %}" style="color:#40E0D0;">Register here.</a>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 mx-auto mt-5">
+            <h2>Login</h2>
+            <form action="{% url 'login' %}" method="post" class="mt-3">
+                {% csrf_token %}
+                <div class="form-group input-field">
+                    <input autofocus class="form-control {% if validation_error %}is-invalid{% endif %}" type="text" name="username" id="username">
+                    <label for="username">Username</label>
+                    {% if validation_error %}
+                        <div class="validation_error text-danger">{{ validation_error }}</div>
+                    {% endif %}
+                </div>
+                <div class="form-group input-field">
+                    <input class="form-control {% if validation_error %}is-invalid{% endif %}" type="password" name="password" id="password">
+                    <label for="password">Password</label>
+                </div>
+                <input class="btn btn-primary" type="submit" value="Login">
+            </form>
+            Don't have an account? <a href="{% url 'register' %}" style="color:#40E0D0;">Register here.</a>
         </div>
     </div>
-    
+</div>
 {% endblock %}
-
-<!--  web50/projects/2020/x/commerce -->
