--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -2,47 +2,41 @@
 {% block title %} | Register{% endblock %}
 
 {% block body %}
-
 <div class="container">
     <div class="row">
-        <div class="col-l1 col-md-4 mx-auto mt-5">
-
+        <div class="col-md-4 mx-auto mt-5">
             <h2 class="mb-3">Register</h2>
-
-
-
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group input-field">
-                    <input class="bg-white {% if username_error %}is-invalid{% endif %}" id="username-input" autofocus type="text" name="username">
-                    <label for="username">Username</label>
+                    <input class="form-control bg-white {% if username_error %}is-invalid{% endif %}" id="username-input" autofocus type="text" name="username">
+                    <label for="username-input">Username</label>
                     {% if username_error %}
-                        <div class="username_error">{{ username_error }}</div>
+                        <div class="username_error text-danger">{{ username_error }}</div>
                     {% endif %}
                 </div>
                 <div class="form-group input-field">
-                    <input class="bg-white" type="email" name="email">
-                    <label for="email">Email Address</label>
+                    <input class="form-control bg-white" type="email" name="email" id="email-input">
+                    <label for="email-input">Email Address</label>
                 </div>
                 <div class="form-group input-field">
-                    <input class="bg-white {% if password_error %}is-invalid{% endif %}" type="password" name="password">
-                    <label for="password">Password</label>
+                    <input class="form-control bg-white {% if password_error %}is-invalid{% endif %}" type="password" name="password" id="password-input">
+                    <label for="password-input">Password</label>
                     {% if password_error %}
-                        <div class="password_error">{{ password_error }}</div>
+                        <div class="password_error text-danger">{{ password_error }}</div>
                     {% endif %}
                 </div>
                 <div class="form-group input-field">
-                    <input class="bg-white {% if password_error %}is-invalid{% endif %}" type="password" name="confirmation">
-                    <label for="Confirm-password">Confirm Password</label>
+                    <input class="form-control bg-white {% if password_error %}is-invalid{% endif %}" type="password" name="confirmation" id="confirmation-input">
+                    <label for="confirmation-input">Confirm Password</label>
                     {% if password_error %}
-                        <div class="password_error">{{ password_error }}</div>
+                        <div class="password_error text-danger">{{ password_error }}</div>
                     {% endif %}
                 </div>
-                <input class="btn btn-full" type="submit" value="Register">
+                <input class="btn btn-primary btn-full" type="submit" value="Register">
             </form>
-
             Already have an account? <a href="{% url 'login' %}" style="color:#40E0D0;">Log In here.</a>
-         </div>
+        </div>
     </div>
 </div>
 {% endblock %}
