--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -303,20 +303,20 @@ input:-webkit-autofill:active {
 
 
 /*--------------------------------------------------------------
-# Portfolio
+# Display
 --------------------------------------------------------------*/
-.portfolio {
+.display {
     padding-bottom: 60px;
 }
 
-.portfolio #portfolio-flters {
+.display #display-flters {
     padding: 0;
     margin: 0 0 35px 0;
     list-style: none;
     text-align: center;
 }
 
-.portfolio #portfolio-flters li {
+.display #display-flters li {
     cursor: pointer;
     margin: 0 12px 5px 12px;
     display: inline-block;
@@ -330,13 +330,13 @@ input:-webkit-autofill:active {
     font-family: "Roboto", sans-serif;
 }
 
-.portfolio #portfolio-flters li:hover,
-.portfolio #portfolio-flters li.filter-active {
+.display #display-flters li:hover,
+.display #display-flters li.filter-active {
     border-color: #008080;
     color: #008080;
 }
 
-.portfolio .portfolio-item {
+.display .display-item {
     background: #008080;
     overflow: hidden;
     height: 300px;
@@ -345,11 +345,11 @@ input:-webkit-autofill:active {
     margin: 0 0 30px 0;
 }
 
-.portfolio .portfolio-item img {
+.display .display-item img {
     transition: all 0.3s ease-in-out;
 }
 
-.portfolio .portfolio-item .portfolio-info {
+.display .display-item .display-info {
     opacity: 0;
     position: absolute;
     transition: all 0.3s linear;
@@ -359,34 +359,34 @@ input:-webkit-autofill:active {
     right: 0;
 }
 
-.portfolio .portfolio-item .portfolio-info h3 {
+.display .display-item .display-info h3 {
     font-size: 22px;
     color: #fff;
     font-weight: bold;
 }
 
-.portfolio .portfolio-item .portfolio-info a i {
+.display .display-item .display-info a i {
     color: rgba(255, 255, 255, 0.6);
     font-size: 28px;
     transition: 0.3s;
 }
 
-.portfolio .portfolio-item .portfolio-info a i:hover {
+.display .display-item .display-info a i:hover {
     color: white;
 }
 
-.portfolio .portfolio-item:hover img {
+.display .display-item:hover img {
     opacity: 0.6;
     transform: scale(1.1);
 }
 
-.portfolio .portfolio-item:hover .portfolio-info {
+.display .display-item:hover .display-info {
     opacity: 1;
     top: calc(50% - 30px);
 }
 
 /*--------------------------------------------------------------
-# End of Portfolio
+# End of Display
 --------------------------------------------------------------*/
 
 
@@ -467,13 +467,13 @@ input:-webkit-autofill:active {
     margin-bottom: 0;
   }
   
-  .create-action .email-form {
+  .create-action .eform {
     box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
     padding: 30px;
     margin-bottom: 30px;
   }
   
-  .create-action .email-form .error-message {
+  .create-action .eform .error-message {
     display: none;
     color: #fff;
     background: #ed3c0d;
@@ -482,11 +482,11 @@ input:-webkit-autofill:active {
     font-weight: 600;
   }
   
-  .create-action .email-form .error-message br+br {
+  .create-action .eform .error-message br+br {
     margin-top: 25px;
   }
   
-  .create-action .email-form .sent-message {
+  .create-action .eform .sent-message {
     display: none;
     color: #fff;
     background: #18d26e;
@@ -495,14 +495,14 @@ input:-webkit-autofill:active {
     font-weight: 600;
   }
   
-  .create-action .email-form .loading {
+  .create-action .eform .loading {
     display: none;
     background: #fff;
     text-align: center;
     padding: 15px;
   }
   
-  .create-action .email-form .loading:before {
+  .create-action .eform .loading:before {
     content: "";
     display: inline-block;
     border-radius: 50%;
@@ -514,27 +514,27 @@ input:-webkit-autofill:active {
     animation: animate-loading 1s linear infinite;
   }
   
-  .create-action .email-form input,
-  .create-action .email-form textarea {
+  .create-action .eform input,
+  .create-action .eform textarea {
     border-radius: 0;
     box-shadow: none;
     font-size: 14px;
   }
   
-  .create-action .email-form input::focus,
-  .create-action .email-form textarea::focus {
+  .create-action .eform input::focus,
+  .create-action .eform textarea::focus {
     background-color: #68A4C4;
   }
   
-  .create-action .email-form input {
+  .create-action .eform input {
     padding: 10px 15px;
   }
   
-  .create-action .email-form textarea {
+  .create-action .eform textarea {
     padding: 12px 15px;
   }
   
-  .create-action .email-form button[type=submit] {
+  .create-action .eform button[type=submit] {
     background: #008080;
     border: 0;
     padding: 10px 24px;
@@ -542,7 +542,7 @@ input:-webkit-autofill:active {
     transition: 0.4s;
   }
   
-  .create-action .email-form button[type=submit]:hover {
+  .create-action .eform button[type=submit]:hover {
     background: #8dbad2;
   }
   
@@ -552,46 +552,46 @@ input:-webkit-autofill:active {
 
 
 /*--------------------------------------------------------------
-# Blog
+# set
 --------------------------------------------------------------*/
-.blog {
+.set {
   padding: 40px 0 20px 0;
 }
 
-.blog .entry {
+.set .entry {
   padding: 30px;
   margin-bottom: 60px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
-.blog .entry .entry-img {
+.set .entry .entry-img {
   max-height: 600px;
   margin: -30px -30px 20px -30px;
   overflow: hidden;
 }
 
-.blog .entry .entry-title {
+.set .entry .entry-title {
   font-size: 28px;
   font-weight: bold;
   padding: 0;
   margin: 0 0 20px 0;
 }
 
-.blog .entry .entry-title a {
+.set .entry .entry-title a {
   color: #1e4356;
   transition: 0.3s;
 }
 
-.blog .entry .entry-title a:hover {
+.set .entry .entry-title a:hover {
   color: #68A4C4;
 }
 
-.blog .entry .entry-meta {
+.set .entry .entry-meta {
   margin-bottom: 15px;
   color: #72afce;
 }
 
-.blog .entry .entry-meta ul {
+.set .entry .entry-meta ul {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -600,33 +600,33 @@ input:-webkit-autofill:active {
   margin: 0;
 }
 
-.blog .entry .entry-meta ul li+li {
+.set .entry .entry-meta ul li+li {
   padding-left: 20px;
 }
 
-.blog .entry .entry-meta i {
+.set .entry .entry-meta i {
   font-size: 16px;
   margin-right: 8px;
   line-height: 0;
 }
 
-.blog .entry .entry-meta a {
+.set .entry .entry-meta a {
   color: #777777;
   font-size: 14px;
   display: inline-block;
   line-height: 1;
 }
 
-.blog .entry .entry-content p {
+.set .entry .entry-content p {
   line-height: 24px;
 }
 
-.blog .entry .entry-content .read-more {
+.set .entry .entry-content .read-more {
   -moz-text-align-last: right;
   text-align-last: right;
 }
 
-.blog .entry .entry-content .read-more a {
+.set .entry .entry-content .read-more a {
   display: inline-block;
   background: #68A4C4;
   color: #fff;
@@ -635,17 +635,17 @@ input:-webkit-autofill:active {
   font-size: 14px;
 }
 
-.blog .entry .entry-content .read-more a:hover {
+.set .entry .entry-content .read-more a:hover {
   background: #7aafcb;
 }
 
-.blog .entry .entry-content h3 {
+.set .entry .entry-content h3 {
   font-size: 22px;
   margin-top: 30px;
   font-weight: bold;
 }
 
-.blog .entry .entry-content blockquote {
+.set .entry .entry-content blockquote {
   overflow: hidden;
   background-color: #fafafa;
   padding: 60px;
@@ -654,7 +654,7 @@ input:-webkit-autofill:active {
   margin: 20px 0;
 }
 
-.blog .entry .entry-content blockquote p {
+.set .entry .entry-content blockquote p {
   color: #444;
   line-height: 1.6;
   margin-bottom: 0;
@@ -663,7 +663,7 @@ input:-webkit-autofill:active {
   font-size: 22px;
 }
 
-.blog .entry .entry-content blockquote::after {
+.set .entry .entry-content blockquote::after {
   content: "";
   position: absolute;
   left: 0;
@@ -675,77 +675,77 @@ input:-webkit-autofill:active {
   margin-bottom: 20px;
 }
 
-.blog .entry .entry-footer {
+.set .entry .entry-footer {
   padding-top: 10px;
   border-top: 1px solid #e6e6e6;
 }
 
-.blog .entry .entry-footer i {
+.set .entry .entry-footer i {
   color: #4c99c1;
   display: inline;
 }
 
-.blog .entry .entry-footer a {
+.set .entry .entry-footer a {
   color: #255269;
   transition: 0.3s;
 }
 
-.blog .entry .entry-footer a:hover {
+.set .entry .entry-footer a:hover {
   color: #68A4C4;
 }
 
-.blog .entry .entry-footer .cats {
+.set .entry .entry-footer .cats {
   list-style: none;
   display: inline;
   padding: 0 20px 0 0;
   font-size: 14px;
 }
 
-.blog .entry .entry-footer .cats li {
+.set .entry .entry-footer .cats li {
   display: inline-block;
 }
 
-.blog .entry .entry-footer .tags {
+.set .entry .entry-footer .tags {
   list-style: none;
   display: inline;
   padding: 0;
   font-size: 14px;
 }
 
-.blog .entry .entry-footer .tags li {
+.set .entry .entry-footer .tags li {
   display: inline-block;
 }
 
-.blog .entry .entry-footer .tags li+li::before {
+.set .entry .entry-footer .tags li+li::before {
   padding-right: 6px;
   color: #6c757d;
   content: ",";
 }
 
-.blog .entry .entry-footer .share {
+.set .entry .entry-footer .share {
   font-size: 16px;
 }
 
-.blog .entry .entry-footer .share i {
+.set .entry .entry-footer .share i {
   padding-left: 5px;
 }
 
-.blog .entry-single {
+.set .entry-single {
   margin-bottom: 30px;
 }
 
-.blog .blog-author {
+.set .set-author {
   padding: 20px;
   margin-bottom: 30px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
-.blog .blog-author img {
+.set .set-author img {
   width: 120px;
   margin-right: 20px;
 }
 
-.blog .blog-author h4 {
+.set .set-author h4 {
   font-weight: 600;
   font-size: 22px;
   margin-bottom: 0px;
@@ -753,145 +753,145 @@ input:-webkit-autofill:active {
   color: #1e4356;
 }
 
-.blog .blog-author .social-links {
+.set .set-author .social-links {
   margin: 0 10px 10px 0;
 }
 
-.blog .blog-author .social-links a {
+.set .set-author .social-links a {
   color: rgba(30, 67, 86, 0.5);
   margin-right: 5px;
 }
 
-.blog .blog-author p {
+.set .set-author p {
   font-style: italic;
   color: #b7b7b7;
 }
 
-.blog .blog-comments {
+.set .set-comments {
   margin-bottom: 30px;
 }
 
-.blog .blog-comments .comments-count {
+.set .set-comments .comments-count {
   font-weight: bold;
 }
 
-.blog .blog-comments .comment {
+.set .set-comments .comment {
   margin-top: 30px;
   position: relative;
 }
 
-.blog .blog-comments .comment .comment-img {
+.set .set-comments .comment .comment-img {
   margin-right: 14px;
 }
 
-.blog .blog-comments .comment .comment-img img {
+.set .set-comments .comment .comment-img img {
   width: 60px;
 }
 
-.blog .blog-comments .comment h5 {
+.set .set-comments .comment h5 {
   font-size: 16px;
   margin-bottom: 2px;
 }
 
-.blog .blog-comments .comment h5 a {
+.set .set-comments .comment h5 a {
   font-weight: bold;
   color: #444;
   transition: 0.3s;
 }
 
-.blog .blog-comments .comment h5 a:hover {
+.set .set-comments .comment h5 a:hover {
   color: #68A4C4;
 }
 
-.blog .blog-comments .comment h5 .reply {
+.set .set-comments .comment h5 .reply {
   padding-left: 10px;
   color: #1e4356;
 }
 
-.blog .blog-comments .comment h5 .reply i {
+.set .set-comments .comment h5 .reply i {
   font-size: 20px;
 }
 
-.blog .blog-comments .comment time {
+.set .set-comments .comment time {
   display: block;
   font-size: 14px;
   color: #2b607c;
   margin-bottom: 5px;
 }
 
-.blog .blog-comments .comment.comment-reply {
+.set .set-comments .comment.comment-reply {
   padding-left: 40px;
 }
 
-.blog .blog-comments .reply-form {
+.set .set-comments .reply-form {
   margin-top: 30px;
   padding: 30px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
-.blog .blog-comments .reply-form h4 {
+.set .set-comments .reply-form h4 {
   font-weight: bold;
   font-size: 22px;
 }
 
-.blog .blog-comments .reply-form p {
+.set .set-comments .reply-form p {
   font-size: 14px;
 }
 
-.blog .blog-comments .reply-form input {
+.set .set-comments .reply-form input {
   border-radius: 4px;
   padding: 10px 10px;
   font-size: 14px;
 }
 
-.blog .blog-comments .reply-form input:focus {
+.set .set-comments .reply-form input:focus {
   box-shadow: none;
   border-color: #b1d0e1;
 }
 
-.blog .blog-comments .reply-form textarea {
+.set .set-comments .reply-form textarea {
   border-radius: 4px;
   padding: 10px 10px;
   font-size: 14px;
 }
 
-.blog .blog-comments .reply-form textarea:focus {
+.set .set-comments .reply-form textarea:focus {
   box-shadow: none;
   border-color: #b1d0e1;
 }
 
-.blog .blog-comments .reply-form .form-group {
+.set .set-comments .reply-form .form-group {
   margin-bottom: 25px;
 }
 
-.blog .blog-comments .reply-form .btn-primary {
+.set .set-comments .reply-form .btn-primary {
   border-radius: 4px;
   padding: 10px 20px;
   border: 0;
   background-color: #1e4356;
 }
 
-.blog .blog-comments .reply-form .btn-primary:hover {
+.set .set-comments .reply-form .btn-primary:hover {
   background-color: #255269;
 }
 
-.blog .blog-pagination {
+.set .set-pagination {
   color: #387ea2;
 }
 
-.blog .blog-pagination ul {
+.set .set-pagination ul {
   display: flex;
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.blog .blog-pagination li {
+.set .set-pagination li {
   margin: 0 5px;
   transition: 0.3s;
 }
 
-.blog .blog-pagination li a {
+.set .set-pagination li a {
   color: #1e4356;
   padding: 7px 16px;
   display: flex;
@@ -899,23 +899,23 @@ input:-webkit-autofill:active {
   justify-content: center;
 }
 
-.blog .blog-pagination li.active,
-.blog .blog-pagination li:hover {
+.set .set-pagination li.active,
+.set .set-pagination li:hover {
   background: #68A4C4;
 }
 
-.blog .blog-pagination li.active a,
-.blog .blog-pagination li:hover a {
+.set .set-pagination li.active a,
+.set .set-pagination li:hover a {
   color: #fff;
 }
 
-.blog .sidebar {
+.set .sidebar {
   padding: 30px;
   margin: 0 0 60px 20px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
-.blog .sidebar .sidebar-title {
+.set .sidebar .sidebar-title {
   font-size: 20px;
   font-weight: 700;
   padding: 0 0 0 0;
@@ -924,25 +924,25 @@ input:-webkit-autofill:active {
   position: relative;
 }
 
-.blog .sidebar .sidebar-item {
+.set .sidebar .sidebar-item {
   margin-bottom: 30px;
 }
 
-.blog .sidebar .search-form form {
+.set .sidebar .search-form form {
   background: #fff;
   border: 1px solid #ddd;
   padding: 3px 10px;
   position: relative;
 }
 
-.blog .sidebar .search-form form input[type=text] {
+.set .sidebar .search-form form input[type=text] {
   border: 0;
   padding: 4px;
   border-radius: 4px;
   width: calc(100% - 40px);
 }
 
-.blog .sidebar .search-form form button {
+.set .sidebar .search-form form button {
   position: absolute;
   top: 0;
   right: 0;
@@ -959,63 +959,63 @@ input:-webkit-autofill:active {
   line-height: 0;
 }
 
-.blog .sidebar .search-form form button i {
+.set .sidebar .search-form form button i {
   line-height: 0;
 }
 
-.blog .sidebar .search-form form button:hover {
+.set .sidebar .search-form form button:hover {
   background: #77adca;
 }
 
-.blog .sidebar .categories ul {
+.set .sidebar .categories ul {
   list-style: none;
   padding: 0;
 }
 
-.blog .sidebar .categories ul li+li {
+.set .sidebar .categories ul li+li {
   padding-top: 10px;
 }
 
-.blog .sidebar .categories ul a {
+.set .sidebar .categories ul a {
   color: #1e4356;
   transition: 0.3s;
 }
 
-.blog .sidebar .categories ul a:hover {
+.set .sidebar .categories ul a:hover {
   color: #68A4C4;
 }
 
-.blog .sidebar .categories ul a span {
+.set .sidebar .categories ul a span {
   padding-left: 5px;
   color: #aaaaaa;
   font-size: 14px;
 }
 
-.blog .sidebar .recent-posts .post-item+.post-item {
+.set .sidebar .recent-posts .post-item+.post-item {
   margin-top: 15px;
 }
 
-.blog .sidebar .recent-posts img {
+.set .sidebar .recent-posts img {
   width: 80px;
   float: left;
 }
 
-.blog .sidebar .recent-posts h4 {
+.set .sidebar .recent-posts h4 {
   font-size: 15px;
   margin-left: 95px;
   font-weight: bold;
 }
 
-.blog .sidebar .recent-posts h4 a {
+.set .sidebar .recent-posts h4 a {
   color: #1e4356;
   transition: 0.3s;
 }
 
-.blog .sidebar .recent-posts h4 a:hover {
+.set .sidebar .recent-posts h4 a:hover {
   color: #68A4C4;
 }
 
-.blog .sidebar .recent-posts time {
+.set .sidebar .recent-posts time {
   display: block;
   margin-left: 95px;
   font-style: italic;
@@ -1023,20 +1023,20 @@ input:-webkit-autofill:active {
   color: #aaaaaa;
 }
 
-.blog .sidebar .tags {
+.set .sidebar .tags {
   margin-bottom: -10px;
 }
 
-.blog .sidebar .tags ul {
+.set .sidebar .tags ul {
   list-style: none;
   padding: 0;
 }
 
-.blog .sidebar .tags ul li {
+.set .sidebar .tags ul li {
   display: inline-block;
 }
 
-.blog .sidebar .tags ul a {
+.set .sidebar .tags ul a {
   color: #3f8db5;
   font-size: 14px;
   padding: 6px 14px;
@@ -1046,19 +1046,19 @@ input:-webkit-autofill:active {
   transition: 0.3s;
 }
 
-.blog .sidebar .tags ul a:hover {
+.set .sidebar .tags ul a:hover {
   color: #fff;
   border: 1px solid #68A4C4;
   background: #68A4C4;
 }
 
-.blog .sidebar .tags ul a span {
+.set .sidebar .tags ul a span {
   padding-left: 5px;
   color: #bedae8;
   font-size: 14px;
 }
 
 /*--------------------------------------------------------------
-# End of Blog
+# End of Set
 --------------------------------------------------------------*/
 
