--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -19,7 +19,7 @@
           <div class="row">
   
             <div class="col-lg-12">
-              <form action="{% url 'create_listing' %}" method="POST" role="form" class="email-form">
+              <form action="{% url 'create_listing' %}" method="POST" role="form" class="eform">
                 {% csrf_token %}
                 <div class="row"><!-- Title -->
                     <div class="col-md-2 form-group">
